--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -1,3 +1,33 @@
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.address=Address
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.addressAddition=Address addition
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.birthdate=Date of birth
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.city=City
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.country=Country
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.email=Email
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.emailAlternative=Alternative email
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.firstname=First name
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.jug=Java User Group
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.lastname=Last name
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.linkedin=LinkedIn
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.mastodon=Mastodon
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.matrix=Matrix
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaAccountHolder=Account holder
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaBic=BIC
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaEnabled=SEPA direct debit enabled
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaIban=IBAN
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaLastDebitDate=Last direct debit
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaMandateDate=Mandate signature date
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaMandateReference=Mandate reference
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaType=Direct debit type
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.zipCode=ZIP code
+domain.clubdesk.boundary.ClubDeskImportView.saveButton=Save Data
+domain.clubdesk.boundary.ClubDeskImportView.step1=Step 1: Upload File
+domain.clubdesk.boundary.ClubDeskImportView.step2=Step 2: Preview
+domain.clubdesk.boundary.ClubDeskImportView.step3=Step 3: Save
+domain.clubdesk.boundary.ClubDeskImportView.title=ClubDesk Import
+domain.clubdesk.boundary.ClubDeskImportView.uploadButton=Upload CSV File
+domain.clubdesk.boundary.ClubDeskImportView.uploadDrop=Drag and drop a CSV file here or click to select one.
+domain.clubdesk.boundary.ClubDeskImportView.uploadIncorrectFileType=Invalid file type. Please upload a CSV file.
 service.ConfirmationService.email.message=Hello!\n\nTo log in to your account, please click the following link:\n\n{0}\n\nThis link is valid for {1}.\nIf you did not request this email, please ignore it.
 service.ConfirmationService.email.subject=Please confirm your email address
 service.ConfirmationService.timeout={timeout, plural, one{one minute} other{{timeout} minutes}}
@@ -10,7 +40,7 @@ web.layout.NavigationBar.themeToggle.tooltip=Toggle Dark Mode
 web.layout.PageFooter.dukeops=DukeOps · Version {0} · Licensed under the AGPLv3 · Copyright © {1} iJUG e. V.
 web.view.ConfirmationView.error.message=The confirmation link is invalid or has expired.  \nPlease request a new one on the [login](/login) page.
 web.view.ConfirmationView.error.title=Confirmation Failed
-web.view.ConfirmationView.success.message=Your email has been successfully confirmed.  \nYou will be redirected to the [dashboard](/dashboard) {timeout, plural, =0{now} one{in one second} other{in {timeout} seconds}}.
+web.view.ConfirmationView.success.message=Your email has been successfully confirmed.  \nYou will be redirected to the [dashboard](/) {timeout, plural, =0{now} one{in one second} other{in {timeout} seconds}}.
 web.view.ConfirmationView.success.title=Confirmation Successful
 web.view.ConfirmationView.title=Confirmation
 web.view.DashboardView.title=Dashboard
