--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -24,6 +24,8 @@ domain.clubdesk.boundary.ClubDeskImportView.saveButton=Save Data
 domain.clubdesk.boundary.ClubDeskImportView.step1=Step 1: Upload File
 domain.clubdesk.boundary.ClubDeskImportView.step2=Step 2: Preview
 domain.clubdesk.boundary.ClubDeskImportView.step3=Step 3: Save
+domain.clubdesk.boundary.ClubDeskImportView.successDialog.text={0} records have been imported.
+domain.clubdesk.boundary.ClubDeskImportView.successDialog.title=Import Completed
 domain.clubdesk.boundary.ClubDeskImportView.title=ClubDesk Import
 domain.clubdesk.boundary.ClubDeskImportView.uploadButton=Upload CSV File
 domain.clubdesk.boundary.ClubDeskImportView.uploadDrop=Drag and drop a CSV file here or click to select one.
