fix(i18n): remove hardcoded UI text
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -24,6 +24,7 @@ domain.clubdesk.boundary.ClubDeskImportView.saveButton=Save Data
 domain.clubdesk.boundary.ClubDeskImportView.step1=Step 1: Upload File
 domain.clubdesk.boundary.ClubDeskImportView.step2=Step 2: Preview
 domain.clubdesk.boundary.ClubDeskImportView.step3=Step 3: Save
+domain.clubdesk.boundary.ClubDeskImportView.successDialog.button=OK
 domain.clubdesk.boundary.ClubDeskImportView.successDialog.text={0} records have been imported.
 domain.clubdesk.boundary.ClubDeskImportView.successDialog.title=Import Completed
 domain.clubdesk.boundary.ClubDeskImportView.title=ClubDesk Import
