feat(clubdesk): allow user to modify address data #3
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -1,3 +1,47 @@
+domain.clubdesk.boundary.ClubDeskEditView.description=Here you can adjust your club's master data.
+domain.clubdesk.boundary.ClubDeskEditView.error.address=The address must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.city=The city must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.country=The country must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.email=The email address is invalid.
+domain.clubdesk.boundary.ClubDeskEditView.error.emailAlternative=The alternative email address is invalid.
+domain.clubdesk.boundary.ClubDeskEditView.error.firstname=The first name must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.javaUserGroup=The Java User Group must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.lastname=The last name must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaAccountHolder=The SEPA account holder must not be empty if SEPA direct debit is enabled.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic=The SEPA BIC is invalid.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban=The SEPA IBAN is invalid.
+domain.clubdesk.boundary.ClubDeskEditView.error.zipCode=The ZIP code must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.errorDialog.button=OK
+domain.clubdesk.boundary.ClubDeskEditView.errorDialog.textNoClubDeskData=No data could be loaded from ClubDesk. Please contact the iJUG Office.
+domain.clubdesk.boundary.ClubDeskEditView.errorDialog.title=Error
+domain.clubdesk.boundary.ClubDeskEditView.info.sepa.allow=I authorize the association iJUG e. V. to collect payments from my account by SEPA direct debit. At the same time, I instruct my bank to honor the direct debits drawn on my account by the association iJUG e. V.
+domain.clubdesk.boundary.ClubDeskEditView.info.sepa.cancel=Note: I can request a refund of the debited amount within eight weeks of the debit date. The terms and conditions agreed with my credit institution apply.
+domain.clubdesk.boundary.ClubDeskEditView.label.address=Street and house number
+domain.clubdesk.boundary.ClubDeskEditView.label.addressAddition=Address addition
+domain.clubdesk.boundary.ClubDeskEditView.label.city=City
+domain.clubdesk.boundary.ClubDeskEditView.label.country=Country
+domain.clubdesk.boundary.ClubDeskEditView.label.email=Email
+domain.clubdesk.boundary.ClubDeskEditView.label.emailAlternative=Alternative email
+domain.clubdesk.boundary.ClubDeskEditView.label.firstname=First name
+domain.clubdesk.boundary.ClubDeskEditView.label.javaUserGroup=Java User Group
+domain.clubdesk.boundary.ClubDeskEditView.label.lastname=Last name
+domain.clubdesk.boundary.ClubDeskEditView.label.linkedin=LinkedIn
+domain.clubdesk.boundary.ClubDeskEditView.label.mastodon=Mastodon
+domain.clubdesk.boundary.ClubDeskEditView.label.matrix=Matrix
+domain.clubdesk.boundary.ClubDeskEditView.label.newsletter.off=I get informed about news on the website and do not want to receive a newsletter
+domain.clubdesk.boundary.ClubDeskEditView.label.newsletter.on=I want to be regularly informed about news by email (about once a month)
+domain.clubdesk.boundary.ClubDeskEditView.label.newsletter=Club information
+domain.clubdesk.boundary.ClubDeskEditView.label.sepaAccountHolder=Account holder
+domain.clubdesk.boundary.ClubDeskEditView.label.sepaBic=BIC
+domain.clubdesk.boundary.ClubDeskEditView.label.sepaEnabled=SEPA direct debit enabled
+domain.clubdesk.boundary.ClubDeskEditView.label.sepaIban=IBAN
+domain.clubdesk.boundary.ClubDeskEditView.label.zipCode=ZIP code
+domain.clubdesk.boundary.ClubDeskEditView.saveButton=Submit changes
+domain.clubdesk.boundary.ClubDeskEditView.select.emptyCaption=Please select
+domain.clubdesk.boundary.ClubDeskEditView.successDialog.button=OK
+domain.clubdesk.boundary.ClubDeskEditView.successDialog.text=Your changes have been successfully saved and submitted to the iJUG office.
+domain.clubdesk.boundary.ClubDeskEditView.successDialog.title=Changes saved
+domain.clubdesk.boundary.ClubDeskEditView.title=Update master data
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.address=Address
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.addressAddition=Address addition
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.birthdate=Date of birth
@@ -31,6 +75,7 @@ domain.clubdesk.boundary.ClubDeskImportView.title=ClubDesk Import
 domain.clubdesk.boundary.ClubDeskImportView.uploadButton=Upload CSV File
 domain.clubdesk.boundary.ClubDeskImportView.uploadDrop=Drag and drop a CSV file here or click to select one.
 domain.clubdesk.boundary.ClubDeskImportView.uploadIncorrectFileType=Invalid file type. Please upload a CSV file.
+domain.clubdesk.control.ClubDeskService.email.office.subject=[DukeOps] New master data for {0} {1}
 service.ConfirmationService.email.message=Hello!\n\nTo log in to your account, please click the following link:\n\n{0}\n\nThis link is valid for {1}.\nIf you did not request this email, please ignore it.
 service.ConfirmationService.email.subject=Please confirm your email address
 service.ConfirmationService.timeout={timeout, plural, one{one minute} other{{timeout} minutes}}
