feat: optionally create an instance admin on application startup
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,14 +1,19 @@
 {
-  "properties" : [
+  "properties": [
     {
-      "name" : "dukeops.mail.from",
-      "type" : "java.lang.String",
-      "description" : "Sender address shown in outgoing emails (e.g. noreply@example.com)."
+      "name": "dukeops.mail.from",
+      "type": "java.lang.String",
+      "description": "Sender address shown in outgoing emails (e.g. noreply@example.com)."
     },
     {
-      "name" : "dukeops.mail.reply-to",
-      "type" : "java.lang.String",
-      "description" : "Optional reply-to address (e.g. `support@example.com`)."
+      "name": "dukeops.mail.reply-to",
+      "type": "java.lang.String",
+      "description": "Optional reply-to address (e.g. `support@example.com`)."
+    },
+    {
+      "name": "dukeops.instance.admin",
+      "type": "java.lang.String",
+      "description": "Email address of the instance admin (e.g. `admin@example.com`)."
     }
   ]
 }
