--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,4 @@ dukeops.mail.from=${DUKEOPS_MAIL_FROM:noreply@localhost}
 dukeops.mail.replyTo=${DUKEOPS_MAIL_REPLY_TO:}
 dukeops.confirm.redirect.timeout=10s
 dukeops.confirm.redirect.tick=1s
+dukeops.instance.admin=${DUKEOPS_INSTANCE_ADMIN:}
