--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -75,6 +75,11 @@ domain.clubdesk.boundary.ClubDeskImportView.title=ClubDesk Import
 domain.clubdesk.boundary.ClubDeskImportView.uploadButton=Upload CSV File
 domain.clubdesk.boundary.ClubDeskImportView.uploadDrop=Drag and drop a CSV file here or click to select one.
 domain.clubdesk.boundary.ClubDeskImportView.uploadIncorrectFileType=Invalid file type. Please upload a CSV file.
+domain.clubdesk.control.ClubDeskService.diff.empty=empty
+domain.clubdesk.control.ClubDeskService.diff.no=no
+domain.clubdesk.control.ClubDeskService.diff.yes=yes
+domain.clubdesk.control.ClubDeskService.email.member.body=Hello {0} {1},\n\nyour master data in the iJUG self-service portal (DukeOps) have just been updated:\n\n{2}\n\nThis email is for your information only. If you made the change yourself, no further action is required. If you did not make this change or notice anything unusual, please contact us immediately at: office@ijug.eu\n\nFor security reasons, we send this notification whenever master data has been changed.\n\nKind regards\nYour iJUG Office
+domain.clubdesk.control.ClubDeskService.email.member.subject=[DukeOps] Your master data has been updated
 domain.clubdesk.control.ClubDeskService.email.office.subject=[DukeOps] New master data for {0} {1}
 service.ConfirmationService.email.message=Hello!\n\nTo log in to your account, please click the following link:\n\n{0}\n\nThis link is valid for {1}.\nIf you did not request this email, please ignore it.
 service.ConfirmationService.email.subject=Please confirm your email address
