feat(sepa): generate deterministic mandate reference
Generate a SEPA mandate reference when SEPA is enabled for a
ClubDesk record.

The reference is derived deterministically from the record UUID
using SHA-256 and Base32 encoding, prefixed with "IJUG-" and
truncated to 12 characters to remain human-readable and SEPA-
compliant.

The mandate reference is generated once and persisted unchanged.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -35,6 +35,7 @@ domain.clubdesk.boundary.ClubDeskEditView.label.sepaAccountHolder=Account holder
 domain.clubdesk.boundary.ClubDeskEditView.label.sepaBic=BIC
 domain.clubdesk.boundary.ClubDeskEditView.label.sepaEnabled=SEPA direct debit enabled
 domain.clubdesk.boundary.ClubDeskEditView.label.sepaIban=IBAN
+domain.clubdesk.boundary.ClubDeskEditView.label.sepaMandateReference=Mandate reference
 domain.clubdesk.boundary.ClubDeskEditView.label.zipCode=ZIP code
 domain.clubdesk.boundary.ClubDeskEditView.saveButton=Submit changes
 domain.clubdesk.boundary.ClubDeskEditView.select.emptyCaption=Please select
@@ -59,10 +60,7 @@ domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaAccountHolder=Account 
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaBic=BIC
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaEnabled=SEPA direct debit enabled
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaIban=IBAN
-domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaLastDebitDate=Last direct debit
-domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaMandateDate=Mandate signature date
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaMandateReference=Mandate reference
-domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaType=Direct debit type
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.zipCode=ZIP code
 domain.clubdesk.boundary.ClubDeskImportView.saveButton=Save Data
 domain.clubdesk.boundary.ClubDeskImportView.step1=Step 1: Upload File
