--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -7,9 +7,9 @@ domain.clubdesk.boundary.ClubDeskEditView.error.emailAlternative=The alternative
 domain.clubdesk.boundary.ClubDeskEditView.error.firstname=The first name must not be empty.
 domain.clubdesk.boundary.ClubDeskEditView.error.javaUserGroup=The Java User Group must not be empty.
 domain.clubdesk.boundary.ClubDeskEditView.error.lastname=The last name must not be empty.
-domain.clubdesk.boundary.ClubDeskEditView.error.sepaAccountHolder=The SEPA account holder must not be empty if SEPA direct debit is enabled.
-domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic=The SEPA BIC is invalid.
-domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban=The SEPA IBAN is invalid.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaAccountHolder=The SEPA account holder must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic=The SEPA BIC must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban=The SEPA IBAN must not be empty.
 domain.clubdesk.boundary.ClubDeskEditView.error.zipCode=The ZIP code must not be empty.
 domain.clubdesk.boundary.ClubDeskEditView.errorDialog.button=OK
 domain.clubdesk.boundary.ClubDeskEditView.errorDialog.textNoClubDeskData=No data could be loaded from ClubDesk. Please contact the iJUG Office.
