refactor(security): delegate logout handling to Spring Security
Remove custom logout view and service logic and rely on the
standard Spring Security `/logout` endpoint instead. This
simplifies the logout flow, avoids Vaadin session lifecycle
issues, and ensures consistent session and security context
cleanup.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -87,6 +87,7 @@ test.placeholder=This is a placeholder: {0}
 test.simpleMessage=Test message in English
 test.twoPlaceholders=These are two placeholders: {0} and {1}
 web.layout.NavigationBar.imprintLink.text=Imprint
+web.layout.NavigationBar.logoutLink.text=Logout
 web.layout.NavigationBar.themeToggle.tooltip=Toggle Dark Mode
 web.layout.PageFooter.dukeops=DukeOps · Version {0} · Licensed under the AGPLv3 · Copyright © {1} iJUG e. V.
 web.view.ConfirmationView.error.message=The confirmation link is invalid or has expired.  \nPlease request a new one on the [login](/login) page.
@@ -102,4 +103,3 @@ web.view.LoginView.login.email.placeholder=Enter your email address
 web.view.LoginView.login.email.validationError=This is not a valid email address.
 web.view.LoginView.login.title=Please log in
 web.view.LoginView.title=Login
-web.view.LogoutView.title=Logout
