feat(mail): add configurable SMTP timeout settings
Introduce environment variables for SMTP connection, read,
and write timeouts to improve resilience against hanging
mail server connections.

Expose `DUKEOPS_MAIL_*` timeout options and document them
in the README.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ logging.level.org.jooq.tools.LoggerListener=WARN
 
 # Actuator: Health Checks
 management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
 
 # Internationalization
 spring.messages.encoding=UTF-8
@@ -28,6 +29,9 @@ spring.mail.properties.mail.smtp.auth=${DUKEOPS_MAIL_SMTP_AUTH:false}
 spring.mail.properties.mail.smtp.starttls.enable=${DUKEOPS_MAIL_STARTTLS_ENABLE:false}
 spring.mail.properties.mail.smtp.starttls.required=${DUKEOPS_MAIL_STARTTLS_REQUIRED:false}
 spring.mail.properties.mail.smtp.ssl.enable=${DUKEOPS_MAIL_SSL_ENABLE:false}
+spring.mail.properties.mail.smtp.connectiontimeout=${DUKEOPS_MAIL_CONNECTION_TIMEOUT:5000}
+spring.mail.properties.mail.smtp.timeout=${DUKEOPS_MAIL_TIMEOUT:5000}
+spring.mail.properties.mail.smtp.writetimeout=${DUKEOPS_MAIL_WRITE_TIMEOUT:5000}
 spring.mail.default-encoding=${DUKEOPS_MAIL_ENCODING:UTF-8}
 
 # Database
