feat: add ClubDesk import to dashboard (only for admins)
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -43,6 +43,7 @@ domain.clubdesk.boundary.ClubDeskEditView.successDialog.button=OK
 domain.clubdesk.boundary.ClubDeskEditView.successDialog.text=Your changes have been successfully saved and submitted to the iJUG office.
 domain.clubdesk.boundary.ClubDeskEditView.successDialog.title=Changes saved
 domain.clubdesk.boundary.ClubDeskEditView.title=Update master data
+domain.clubdesk.boundary.ClubDeskImportView.description=Here you can import master data from ClubDesk.
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.address=Address
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.addressAddition=Address addition
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.birthdate=Date of birth
