--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,19 +1,24 @@
 {
-  "properties": [
+  "properties" : [
     {
-      "name": "dukeops.mail.from",
+      "name": "dukeops.buildTime",
       "type": "java.lang.String",
-      "description": "Sender address shown in outgoing emails (e.g. noreply@example.com)."
+      "description": "Timestamp of the build when the application artifact was created. Used to identify the exact nightly or CI build running in an environment."
     },
     {
-      "name": "dukeops.mail.reply-to",
-      "type": "java.lang.String",
-      "description": "Optional reply-to address (e.g. `support@example.com`)."
+      "name" : "dukeops.mail.from",
+      "type" : "java.lang.String",
+      "description" : "Sender address shown in outgoing emails (e.g. noreply@example.com)."
     },
     {
-      "name": "dukeops.instance.admin",
-      "type": "java.lang.String",
-      "description": "Email address of the instance admin (e.g. `admin@example.com`)."
+      "name" : "dukeops.mail.reply-to",
+      "type" : "java.lang.String",
+      "description" : "Optional reply-to address (e.g. `support@example.com`)."
+    },
+    {
+      "name" : "dukeops.instance.admin",
+      "type" : "java.lang.String",
+      "description" : "Email address of the instance admin (e.g. `admin@example.com`)."
     }
   ]
 }
