--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,6 +45,7 @@ vaadin.launch-browser=false
 
 # Application version
 dukeops.version=@project.version@
+dukeops.buildTime=@maven.build.timestamp@
 
 # Application specific configuration
 dukeops.baseUrl=${DUKEOPS_BASEURL:http://localhost:8080}
