feat(ui): hide build timestamp in release versions
Display only the version number in the footer for release
builds. The build timestamp is now shown exclusively for
non-release builds to reduce visual noise in production.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -25,6 +25,7 @@ spring.flyway.placeholderReplacement=false
 
 # Application version
 dukeops.version=@project.version@
+dukeops.buildTime=@maven.build.timestamp@
 
 # Application specific configuration
 dukeops.baseUrl=${DUKEOPS_BASEURL:}
