feat(config): support comma-separated admin email list
Allow the environment variable for instance administrator
email addresses to accept a comma-separated list instead
of a single address.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -16,9 +16,9 @@
       "description" : "Optional reply-to address (e.g. `support@example.com`)."
     },
     {
-      "name" : "dukeops.instance.admin",
+      "name" : "dukeops.instance.admins",
       "type" : "java.lang.String",
-      "description" : "Email address of the instance admin (e.g. `admin@example.com`)."
+      "description" : "A comma-separated list of email addresses of the instance administrators."
     }
   ]
 }
