--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -33,4 +33,4 @@ dukeops.mail.from=sender@localhost
 dukeops.mail.replyTo=reply@localhost
 dukeops.confirm.redirect.timeout=2s
 dukeops.confirm.redirect.tick=1s
-dukeops.instance.admin=
+dukeops.instance.admins=
