feat(clubdesk): validate and normalize IBAN/BIC input #10
Add iban4j-based validation for IBAN and BIC fields.
Restrict input to alphanumeric characters, enforce max lengths,
and normalize values to uppercase on blur and when building the DTO.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations.properties
+++ b/src/main/resources/vaadin-i18n/translations.properties
@@ -8,8 +8,10 @@ domain.clubdesk.boundary.ClubDeskEditView.error.firstname=The first name must no
 domain.clubdesk.boundary.ClubDeskEditView.error.javaUserGroup=The Java User Group must not be empty.
 domain.clubdesk.boundary.ClubDeskEditView.error.lastname=The last name must not be empty.
 domain.clubdesk.boundary.ClubDeskEditView.error.sepaAccountHolder=The SEPA account holder must not be empty.
-domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic=The SEPA BIC must not be empty.
-domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban=The SEPA IBAN must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic.empty=The SEPA BIC must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic.invalid=The SEPA BIC is invalid.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban.empty=The SEPA IBAN must not be empty.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban.invalid=The SEPA IBAN is invalid.
 domain.clubdesk.boundary.ClubDeskEditView.error.zipCode=The ZIP code must not be empty.
 domain.clubdesk.boundary.ClubDeskEditView.errorDialog.button=OK
 domain.clubdesk.boundary.ClubDeskEditView.errorDialog.textNoClubDeskData=No data could be loaded from ClubDesk. Please contact the iJUG Office.
